--- a/app/views/register.html
+++ b/app/views/register.html
@@ -8,14 +8,14 @@
 
     </div>
        
-	 <form class="form-horizontal">
+	 <form class="form-horizontal" method="post" action="">
         <h3>Primary Address</h3>
         <div class="row">
             <div class="col-md-6">
                 <div class="form-group">
                     <label for="" class="col-md-4 control-label">First Name</label>
                     <div class="col-md-8">
-                        <input type="text" class="form-control">
+                        <input type="text" class="form-control" name="firstname">
                     </div>
                 </div>
             </div>
@@ -23,7 +23,7 @@
                 <div class="form-group">
                     <label for="" class="col-md-4 control-label">Last Name</label>
                     <div class="col-md-8">
-                        <input type="text" class="form-control">
+                        <input type="text" class="form-control" name="lastname">
                     </div>
                 </div>
             </div>
