Various bug fixes and changes from client

--- a/app/views/partials/footer.html
+++ b/app/views/partials/footer.html
@@ -13,27 +13,27 @@
             <ul>
 
                 
-                        <li><img height="139" src="http://wsi.blackstormtest.com/wp-content/uploads/2014/12/GRIMMWAY-SOFTBALL.jpg"></li>
+                        <li><img height="139" src="{{remoteURL}}wp-content/uploads/2014/12/GRIMMWAY-SOFTBALL.jpg"></li>
 
                         
-                        <li><img height="139" src="http://wsi.blackstormtest.com/wp-content/uploads/2014/12/FAIRFAX1.jpg"></li>
+                        <li><img height="139" src="{{remoteURL}}wp-content/uploads/2014/12/FAIRFAX1.jpg"></li>
 
                         
-                        <li><img height="139" src="http://wsi.blackstormtest.com/wp-content/uploads/2014/12/GEORGECO.jpg"></li>
+                        <li><img height="139" src="{{remoteURL}}wp-content/uploads/2014/12/GEORGECO.jpg"></li>
 
                         
-                        <li><img height="139" src="http://wsi.blackstormtest.com/wp-content/uploads/2014/12/GRIMMWAY2.jpg"></li>
+                        <li><img height="139" src="{{remoteURL}}wp-content/uploads/2014/12/GRIMMWAY2.jpg"></li>
 
                         
-                        <li><img height="139" src="http://wsi.blackstormtest.com/wp-content/uploads/2014/12/GRIMMWAY3.jpg"></li>
+                        <li><img height="139" src="{{remoteURL}}wp-content/uploads/2014/12/GRIMMWAY3.jpg"></li>
 
                         
-                        <li><img height="139" src="http://wsi.blackstormtest.com/wp-content/uploads/2014/12/GRIMMWAY4.jpg"></li>
+                        <li><img height="139" src="{{remoteURL}}wp-content/uploads/2014/12/GRIMMWAY4.jpg"></li>
 
                         
             </ul>
 
-            <div class="clients-more"><a class="view_but" href="http://wsi.blackstormtest.com/portfolio/">view full portfolio</a></div>
+            <div class="clients-more"><a class="view_but" href="{{remoteURL}}portfolio/">view full portfolio</a></div>
 
         </div>
 
@@ -65,7 +65,7 @@
 
                                 <span class="testi">Heather Dewar</span>
 
-                                <a href="http://wsi.blackstormtest.com/testimonials/" class="more">More</a>
+                                <a href="{{remoteURL}}testimonials/" class="more">More</a>
 
                             </div>
 
@@ -80,7 +80,7 @@
 
                                 <span class="testi">Robert Moncada</span>
 
-                                <a href="http://wsi.blackstormtest.com/testimonials/" class="more">More</a>
+                                <a href="{{remoteURL}}testimonials/" class="more">More</a>
 
                             </div>
 
@@ -95,7 +95,7 @@
 
                                 <span class="testi">Gino Valpredo</span>
 
-                                <a href="http://wsi.blackstormtest.com/testimonials/" class="more">More</a>
+                                <a href="{{remoteURL}}testimonials/" class="more">More</a>
 
                             </div>
 
@@ -110,7 +110,7 @@
 
                                 <span class="testi">Sue Beal</span>
 
-                                <a href="http://wsi.blackstormtest.com/testimonials/" class="more">More</a>
+                                <a href="{{remoteURL}}testimonials/" class="more">More</a>
 
                             </div>
 
@@ -125,7 +125,7 @@
 
                                 <span class="testi">Mandy Harris</span>
 
-                                <a href="http://wsi.blackstormtest.com/testimonials/" class="more">More</a>
+                                <a href="{{remoteURL}}testimonials/" class="more">More</a>
 
                             </div>
 
@@ -140,7 +140,7 @@
 
                                 <span class="testi">Tracy Hunter</span>
 
-                                <a href="http://wsi.blackstormtest.com/testimonials/" class="more">More</a>
+                                <a href="{{remoteURL}}testimonials/" class="more">More</a>
 
                             </div>
 
@@ -155,7 +155,7 @@
 
             
 <div class="ad">
-						<img src="http://wsi.blackstormtest.com/wp-content/uploads/2014/12/ad.jpg">
+						<img src="{{remoteURL}}wp-content/uploads/2014/12/ad.jpg">
 						<div class="ad_title">Special of the MOnth</div>
 					</div>
 					
@@ -170,7 +170,7 @@
 
             <div class="new_wallstreet">
 						<p>New at Wall Street</p>
-						<img src="http://wsi.blackstormtest.com/wp-content/uploads/2014/12/video.jpg">
+						<img src="{{remoteURL}}wp-content/uploads/2014/12/video.jpg">
 					</div>
 		
    
@@ -182,11 +182,11 @@
 
                     <ul>
 
-                        <li><a href="https://www.facebook.com/pages/Wall-Street-Imprintables/216665531715277"><img src="http://wsi.blackstormtest.com/wp-content/themes/walstreet/library/images/soc_icon_1.jpg"></a></li>
+                        <li><a href="https://www.facebook.com/pages/Wall-Street-Imprintables/216665531715277"><img src="{{remoteURL}}wp-content/themes/walstreet/library/images/soc_icon_1.jpg"></a></li>
 
-                        <li><a href="http://instagram.com/wallstreetimprintables?ref=badge"><img src="http://wsi.blackstormtest.com/wp-content/themes/walstreet/library/images/soc_icon_2.jpg"></a></li>
+                        <li><a href="http://instagram.com/wallstreetimprintables?ref=badge"><img src="{{remoteURL}}wp-content/themes/walstreet/library/images/soc_icon_2.jpg"></a></li>
 
-                        <li><a href="https://twitter.com/wall_street_imp"><img src="http://wsi.blackstormtest.com/wp-content/themes/walstreet/library/images/soc_icon_3.jpg"></a></li>
+                        <li><a href="https://twitter.com/wall_street_imp"><img src="{{remoteURL}}wp-content/themes/walstreet/library/images/soc_icon_3.jpg"></a></li>
 
                     </ul>
 
@@ -244,7 +244,7 @@
 
                 <div class="mail_block">
 
-                     <div id="wp_email_capture" class="wp-email-capture wp-email-capture-widget wp-email-capture-widget-worldwide"><form name="wp_email_capture" method="post" action="http://wsi.blackstormtest.com/">
+                     <div id="wp_email_capture" class="wp-email-capture wp-email-capture-widget wp-email-capture-widget-worldwide"><form name="wp_email_capture" method="post" action="{{remoteURL}}">
 
  	
 
@@ -272,7 +272,7 @@
 
 <div class="copyright">
 
-    <div class="container">© Copyright 2014 WallStreet Imprintables. | <a href="http://wsi.blackstormtest.com/sitemap/">Sitemap</a> | <a href="http://wsi.blackstormtest.com/privacy-policy/">Privacy Policy</a></div>
+    <div class="container">© Copyright 2014 WallStreet Imprintables. | <a href="{{remoteURL}}sitemap/">Sitemap</a> | <a href="{{remoteURL}}privacy-policy/">Privacy Policy</a></div>
 
 </div>
 
@@ -292,24 +292,27 @@
 
 
 
-<!-- ngg_resource_manager_marker --><script type='text/javascript' src='http://wsi.blackstormtest.com/wp-content/plugins/contact-form-7/includes/js/jquery.form.min.js?ver=3.51.0-2014.06.20'></script>
+<!-- ngg_resource_manager_marker --><script type='text/javascript' src='{{remoteURL}}wp-content/plugins/contact-form-7/includes/js/jquery.form.min.js?ver=3.51.0-2014.06.20'></script>
 <script type='text/javascript'>
 /* <![CDATA[ */
 var _wpcf7 = {"loaderUrl":"http:\/\/wsi.blackstormtest.com\/wp-content\/plugins\/contact-form-7\/images\/ajax-loader.gif","sending":"Sending ..."};
 /* ]]> */
 </script>
-<script type='text/javascript' src='http://wsi.blackstormtest.com/wp-content/plugins/contact-form-7/includes/js/scripts.js?ver=4.2.2'></script>
-<script type='text/javascript' src='http://wsi.blackstormtest.com/wp-content/themes/walstreet/library/js/owl.carousel.js?ver=4.3.1'></script>
-<script type='text/javascript' src='http://wsi.blackstormtest.com/wp-content/plugins/wp-jquery-lightbox/jquery.touchwipe.min.js?ver=1.4.6'></script>
+<script type='text/javascript' src='{{remoteURL}}wp-content/plugins/contact-form-7/includes/js/scripts.js?ver=4.2.2'></script>
+<script type='text/javascript' src='{{remoteURL}}wp-content/themes/walstreet/library/js/owl.carousel.js?ver=4.3.1'></script>
+<script type='text/javascript' src='{{remoteURL}}wp-content/plugins/wp-jquery-lightbox/jquery.touchwipe.min.js?ver=1.4.6'></script>
 <script type='text/javascript'>
 /* <![CDATA[ */
 var JQLBSettings = {"showTitle":"1","showCaption":"1","showNumbers":"1","fitToScreen":"0","resizeSpeed":"400","showDownload":"0","navbarOnTop":"0","marginSize":"","slideshowSpeed":"4000","prevLinkTitle":"previous image","nextLinkTitle":"next image","closeTitle":"close image gallery","image":"Image ","of":" of ","download":"Download","pause":"(pause slideshow)","play":"(play slideshow)"};
 var JQLBSettings = {"showTitle":"1","showCaption":"1","showNumbers":"1","fitToScreen":"0","resizeSpeed":"400","showDownload":"0","navbarOnTop":"0","marginSize":"","slideshowSpeed":"4000","prevLinkTitle":"previous image","nextLinkTitle":"next image","closeTitle":"close image gallery","image":"Image ","of":" of ","download":"Download","pause":"(pause slideshow)","play":"(play slideshow)"};
 /* ]]> */
 </script>
-<script type='text/javascript' src='http://wsi.blackstormtest.com/wp-content/plugins/wp-jquery-lightbox/jquery.lightbox.min.js?ver=1.4.6'></script>
+<script type='text/javascript' src='{{remoteURL}}wp-content/plugins/wp-jquery-lightbox/jquery.lightbox.min.js?ver=1.4.6'></script>
 <!-- Facebook Comments Plugin for WordPress: http://peadig.com/wordpress-plugins/facebook-comments/ -->
 <div id="fb-root"></div>
+<script type='text/javascript' src='{{ includePath }}js/bootstrap-datetimepicker.min.js'></script>
+<script type='text/javascript' src='{{ includePath }}js/moment.min.js'></script>
+<script type='text/javascript' src='{{ customIncludePath }}js/script.js'></script>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
